[package]
name = "svd-mmap"
version = "0.1.0"
authors = ["Brandon Edens <brandonedens@gmail.com>"]

[lib]
name = "svd_mmap"
plugin = true

[dependencies]
aster = "*"
clap = "2.13.0"
inflections = "1.0.0"
quasi = "*"
quasi_macros = "*"
svd-parser = { git = "https://github.com/japaric/svd" }

[dev-dependencies]
volatile_cell = {git = "https://github.com/hackndev/zinc"}
